<resources>
    <string name="app_name">Shared clipboard</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Notifications</string>
    <string name="history_header">Clipboard history</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Automatic clipboard synchronization</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="notification_title">Show notifications</string>
    <string name="sync_header">Synchronization</string>
    <string name="history_title">Use history</string>
    <string name="history_size_tile">Clipboard history size</string>
    <string name="title_activity_connection">Connection</string>

    <string name="notification_t">Shared clipboard</string>
    <string name="notification_message">Connected</string>
    <string name="ticker_text">_ticker</string>

    <string name="ws_connected">Connected</string>
    <string name="ws_connecting">Connecting…</string>
    <string name="ws_disconnected">Disconnected</string>
    <string name="ws_paused">Paused</string>
    <string name="btn_connect">Connect</string>
    <string name="btn_disconnect">Disconnect</string>
    <string name="status">Status:</string>
    <string name="room_id">Room ID</string>
    <string name="clipboard_history_items">clipboard_history_items</string>
    <string name="preferences_file_key_history">SharedClipboard_PREFERENCES_FILE_KEY_HISTORY</string>
    <string name="clipboard_item_from_server">Shared Clipboard | From server</string>
    <string name="clipboard_item_from_history">Shared Clipboard | From history</string>

</resources>